# mabel-test

./: .codecov.yml  .editorconfig  .rustfmt.toml  Cargo.toml  LICENSE  Makefile.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cli.rs
locales/en-US/: cli.ftl  common.ftl  data_type.ftl  lexer.ftl  parser.ftl  semantic-checker.ftl  token.ftl  utils.ftl
src/: clap_utils.rs  lib.rs  main.rs
src/common/: config.rs  error.rs  i18n.rs  mod.rs  utils.rs
src/compiler/: annotated_ast.rs  data_type.rs  mod.rs  semantic_checker.rs  session_globals.rs
src/parser/: ast.rs  lexer.rs  mod.rs  span.rs  token.rs
tests/scripts/: dev.mbl
