[package]
name = "mabel"
version = "0.1.0"
edition = "2021"
authors = ["Hein Thant Maung Maung"]

[lib]
name = "mabel"
path = "src/lib.rs"

[dependencies]
codespan-reporting = "0.11.1"
coverage-helper = "0.2.2"
fluent-templates = "0.9.4"
serde_json = "1.0.117"
serial_test = "3.1.1"
smol_str = "0.2.2"
sys-locale = "0.3.1"
termcolor = "1.4.1"
unic-langid = "0.9.5"
unicode-segmentation = "1.11.0"
unicode-xid = "0.2.4"
url = "2.5.0"

[dependencies.chrono]
version = "0.4.38"
features = ["unstable-locales"]

[dependencies.clap]
version = "4.5.4"
features = ["cargo"]

[workspace]
members = ["fuzz"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(fuzzing)', 'cfg(coverage_nightly)', 'cfg(coverage)']
